fix: testcode Join these multiple assertions subject to one assertion chain